--- a/configs/data/d_mnist_usps.yaml
+++ b/configs/data/d_mnist_usps.yaml
@@ -1,5 +1,5 @@
 _target_: src.data.d_mnist_usps_datamodule.DataModule
-data_dir: ${paths.data_dir}
+data_dir: None
 batch_size: 16
 train_val_split: [0.8, 0.2]
 num_workers: 4
