--- a/configs/experiment/e_ada.yaml
+++ b/configs/experiment/e_ada.yaml
@@ -13,7 +13,7 @@ defaults:
 # all parameters below will be merged with parameters from default configurations set above
 # this allows you to overwrite only specified parameters
 
-tags: ["mnist_usps", "domain adaptation", "CORAL"]
+tags: ["mnist_usps", "domain adaptation", "MMD"]
 
 seed: 12345
 
