--- a/configs/hparams_search/mnist_optuna.yaml
+++ b/configs/hparams_search/mnist_optuna.yaml
@@ -47,6 +47,6 @@ hydra:
     params:
       model.optimizer.lr: interval(0.0001, 0.1)
       data.batch_size: choice(32, 64, 128, 256)
-      model.net.lin1_size: choice(64, 128, 256)
+      model.lambd: choice(64, 128, 256)
       model.net.lin2_size: choice(64, 128, 256)
       model.net.lin3_size: choice(32, 64, 128, 256)
