--- a/configs/trainer/default.yaml
+++ b/configs/trainer/default.yaml
@@ -15,5 +15,6 @@ devices: 1
 check_val_every_n_epoch: 1
 
 # set True to to ensure deterministic results
-# makes training slower but gives more reproducibility than just setting seeds
+# set to warn to use deterministic algos whenever possible but not returning errors if not possible
+# makes training slower but gives more reproducibility than just setting seeds,
 deterministic: False
