corrected schedule.sh

--- a/configs/hparams_search/lambda_search.yaml
+++ b/configs/hparams_search/lambda_search.yaml
@@ -8,7 +8,7 @@ defaults:
 
 # choose metric which will be optimized by Optuna
 # make sure this is the correct name of some metric logged in lightning module!
-optimized_metric: "val/acc_best"
+optimized_metric: "test/acc"
 
 # here we define Optuna hyperparameter search
 # it optimizes for value returned from function with @hydra.main decorator
@@ -27,7 +27,7 @@ hydra:
     study_name: null
 
     # number of parallel workers
-    n_jobs: 1
+    n_jobs: -1
 
     # 'minimize' or 'maximize' the objective
     direction: maximize
@@ -48,4 +48,4 @@ hydra:
       model.optimizer.lr: interval(0.0001, 0.1)
       data.batch_size: choice(256, 512)
       model.lambd: interval(1, 100)
-      
+
