--- a/configs/experiment/e_seb.yaml
+++ b/configs/experiment/e_seb.yaml
@@ -13,13 +13,13 @@ defaults:
 # all parameters below will be merged with parameters from default configurations set above
 # this allows you to overwrite only specified parameters
 
-tags: ["usps mnist", "gridsearch", "MMD"]
+tags: ["svhn mnist", "gridsearch", "MMD"]
 
 seed: 12345
 
 trainer:
-  min_epochs: 20
-  max_epochs: 70
+  min_epochs: 50
+  max_epochs: 100
 #  gradient_clip_val: 0.5
 
 model:
@@ -28,6 +28,10 @@ model:
   compile: false
   loss:
     _target_: src.losses.MMDLossBandwith
+    kernel : 
+      _target_: src.losses.RBF
+      n_kernels : 6
+  
 
 data:
   batch_size: 256
@@ -42,7 +46,7 @@ logger:
 callbacks:
   early_stopping: 
     monitor: "val/loss"
-    patience: 3
+    patience: 5
     mode: "min"
   model_checkpoint:
     dirpath: ${paths.output_dir}/checkpoints
