--- a/configs/hparams_search/lambda_search.yaml
+++ b/configs/hparams_search/lambda_search.yaml
@@ -8,7 +8,7 @@ defaults:
 
 # choose metric which will be optimized by Optuna
 # make sure this is the correct name of some metric logged in lightning module!
-optimized_metric: "test/acc"
+optimized_metric: "val/loss"
 
 # here we define Optuna hyperparameter search
 # it optimizes for value returned from function with @hydra.main decorator
@@ -45,7 +45,6 @@ hydra:
 
     # define hyperparameter search space
     params:
-      model.optimizer.lr: interval(0.0001, 0.1)
       data.batch_size: choice(256, 512)
       model.lambd: interval(1, 100)
 
