--- a/configs/experiment/e_seb.yaml
+++ b/configs/experiment/e_seb.yaml
@@ -29,12 +29,12 @@ model:
   loss:
     _target_: src.losses.MMDLossBandwith
     kernel : 
-      _target_: src.losses.RBF
+      _target_: src.losses.RQ
       n_kernels : 6
   
 
 data:
-  batch_size: 256
+  batch_size: 256 
 
 logger:
   wandb:
