added shifted dataset

--- a/configs/data/d_domain_adaptation.yaml
+++ b/configs/data/d_domain_adaptation.yaml
@@ -1,8 +1,11 @@
 _target_: src.data.d_domain_adaptation_datamodule.DataModule
 source_dataset:
-  _target_: src.data.datasets.d_usps.UspsDataset
+  _target_: src.data.datasets.d_shifted.ShiftedDataset
+  #source: True
 target_dataset:
-  _target_: src.data.datasets.d_mnist.MnistDataset
+  _target_: src.data.datasets.d_shifted.ShiftedDataset
+  #source: False
 batch_size: 16
 num_workers: 4
 pin_memory: False
+
